# libzmq_test

./: 123cpp  CMakeLists.txt  README.md  main.cpp  scp_auto.sh
feature/easylogging/: my_easylogging.cpp  my_easylogging.h
log/: log.conf
shell/: strat_gdbserver.sh
staic_build_project/test1/: CMakeLists.txt  build_project.sh  env_linux.sh
staic_build_project/test1/inc/: test.h
staic_build_project/test1/src/: test.cpp
staic_build_project/test2/: CMakeLists.txt  build_project.sh
staic_build_project/test2/inc/: test2.h
staic_build_project/test2/src/: test2.cpp
